# secrecy

./: .gitignore  .secrecy.py  CONTRIBUTING.md  README.md  TUTORIAL.md  justfile  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yaml
docs/: index.md
docs/core/: concepts.md
docs/ecosystem/: index.md
docs/ecosystem/cloud_providers/: aws.md  azure.md  google_cloud.md
docs/ecosystem/password_managers/: onepassword.md
docs/ecosystem/simple_solutions/: encrypted_files.md  environment_variables.md
