[project]
name = "secrecy-monorepo"
version = "0.1.0"

[tool.uv]
package = false
dev-dependencies = [
  "mkdocs-git-committers-plugin-2>=2.4.1",
  "mkdocs-git-revision-date-localized-plugin>=1.2.9",
  "mkdocs-material>=9.5.40",
  "mypy>=1.11.2",
  "pytest-asyncio>=0.24.0",
  "pytest-coverage>=0.0",
  "pytest-dotenv>=0.5.2",
  "pytest>=8.3.3",
  "ruff>=0.6.8",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
secrecy = { workspace = true }

[tool.ruff.lint]
extend-select = ["I", "E", "W", "N"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"

[tool.coverage.run]
include = ["packages/**/*.py"]
branch = true
parallel = true

[tool.secrecy.secrets]
modules = ["secrecy.cli_test"]
